fix/ layout shifts

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -504,7 +504,7 @@ ul {
 }
 
 .footer-col {
-  /* width: 25%; */
+  width: 300px;
   padding: 0 15px;
   margin-left: 60px;
 }
